# MDCS-wyklad-replit

./: BA_test.py  README.md  WS_test.py  barabasi_40.csv  erdos_40.csv  funkcje.py  generuj_grafy.py  losowa_vs_bezskalowa.py  main.py  male_swiaty.py  opis.md  pyproject.toml  stworz_gify.py
stare/: funkcje.py  krawedzie.csv  main.py  wezly.csv
wejscie/: WattsStrogatz_full_lockdown.csv  WattsStrogatz_half_lockdown.csv  WattsStrogatz_lockdown.csv  WattsStrogatz_no_lockdown.csv  barabasi.csv  barabasi_100.csv  barabasi_40.csv  erdos.csv  erdos_100.csv  erdos_40.csv
wyjscie/: WattsStrogatz_full_lockdown_wynik.csv  WattsStrogatz_half_lockdown_wynik.csv  WattsStrogatz_lockdown.csv  WattsStrogatz_lockdown_wynik.csv  WattsStrogatz_no_lockdown_wynik.csv  barabasi_wynik.csv  erdos_wynik.csv
